--- a/handlers.py.template
+++ b/handlers.py.template
@@ -31,7 +31,7 @@ def check_call(args, cwd):
     LOG.warn(stdout)
     LOG.warn(stderr)
     if proc.returncode != 0:
-        raise exceptions.InternalFailure(f"{stderr}")
+        raise exceptions.InternalFailure(f"{stderr.decode('utf-8')}")
     
     return stdout
 
@@ -105,9 +105,9 @@ def create_handler(
             f.write(json.dumps(tf, indent=2))
 
         LOG.warn("Initializing provider")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init', '-no-color'], "/tmp/")
         LOG.warn("Executing create")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'apply', '-auto-approve'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'apply', '-auto-approve', '-no-color'], "/tmp/")
 
         LOG.warn("Storing result")
         with open("/tmp/terraform.tfstate", "rb") as f:
@@ -119,8 +119,9 @@ def create_handler(
         model.tfcfnid = trackingid
 
         progress.status = OperationStatus.SUCCESS
-    except TypeError as e:
-        raise exceptions.InternalFailure(f"{e}")
+    except Exception as e:
+        progress.message = str(e)
+        progress.status = OperationStatus.FAILED
     return progress
 
 
@@ -181,17 +182,18 @@ def update_handler(
             f.write(json.dumps(tf, indent=2))
 
         LOG.warn("Initializing provider")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init', '-no-color'], "/tmp/")
         LOG.warn("Executing update")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'apply', '-auto-approve'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'apply', '-auto-approve', '-no-color'], "/tmp/")
 
         LOG.warn("Storing result")
         with open("/tmp/terraform.tfstate", "rb") as f:
             s3client.upload_fileobj(f, statebucketname, "{}.tfstate".format(trackingid))
 
         progress.status = OperationStatus.SUCCESS
-    except TypeError as e:
-        raise exceptions.InternalFailure(f"{e}")
+    except Exception as e:
+        progress.message = str(e)
+        progress.status = OperationStatus.FAILED
     return progress
 
 
@@ -255,9 +257,9 @@ def delete_handler(
             f.write(json.dumps(tf, indent=2))
         
         LOG.warn("Initializing provider")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'init', '-no-color'], "/tmp/")
         LOG.warn("Executing delete")
-        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'destroy', '-auto-approve'], "/tmp/")
+        check_call([os.path.dirname(os.path.realpath(__file__)) + '/terraform', 'destroy', '-auto-approve', '-no-color'], "/tmp/")
 
         LOG.warn("Deleting state S3 object")
         s3client.delete_object(
@@ -266,8 +268,9 @@ def delete_handler(
         )
 
         progress.status = OperationStatus.SUCCESS
-    except TypeError as e:
-        raise exceptions.InternalFailure(f"{e}")
+    except Exception as e:
+        progress.message = str(e)
+        progress.status = OperationStatus.FAILED
     return progress
 
 
