Move to callback model

--- a/.gitignore
+++ b/.gitignore
@@ -130,4 +130,81 @@ dmypy.json
 
 # Custom
 resources
-resource_docs
+executor_lambda/app.zip
+docs/acme.md
+docs/alicloud.md
+docs/arukas.md
+docs/aws.md
+docs/azuread.md
+docs/azurerm.md
+docs/azurestack.md
+docs/bigip.md
+docs/bitbucket.md
+docs/brightbox.md
+docs/chef.md
+docs/circonus.md
+docs/cloudflare.md
+docs/cloudscale.md
+docs/cloudstack.md
+docs/cobbler.md
+docs/consul.md
+docs/datadog.md
+docs/digitalocean.md
+docs/dns.md
+docs/dnsimple.md
+docs/docker.md
+docs/dyn.md
+docs/fastly.md
+docs/flexibleengine.md
+docs/github.md
+docs/gitlab.md
+docs/google.md
+docs/grafana.md
+docs/hcloud.md
+docs/hedvig.md
+docs/heroku.md
+docs/huaweicloud.md
+docs/icinga2.md
+docs/influxdb.md
+docs/kubernetes.md
+docs/linode.md
+docs/local.md
+docs/logicmonitor.md
+docs/mailgun.md
+docs/mysql.md
+docs/netlify.md
+docs/newrelic.md
+docs/nomad.md
+docs/ns1.md
+docs/nsxt.md
+docs/nutanix.md
+docs/oci.md
+docs/opc.md
+docs/openstack.md
+docs/opentelekomcloud.md
+docs/opsgenie.md
+docs/oraclepaas.md
+docs/ovh.md
+docs/packet.md
+docs/pagerduty.md
+docs/panos.md
+docs/postgresql.md
+docs/powerdns.md
+docs/rabbitmq.md
+docs/rancher.md
+docs/random.md
+docs/rundeck.md
+docs/runscope.md
+docs/scaleway.md
+docs/skytap.md
+docs/spotinst.md
+docs/statuscake.md
+docs/template.md
+docs/tencentcloud.md
+docs/tfe.md
+docs/tls.md
+docs/triton.md
+docs/ucloud.md
+docs/vault.md
+docs/vcd.md
+docs/vsphere.md
