--- a/handlers.py.template
+++ b/handlers.py.template
@@ -173,6 +173,9 @@ def update_handler(
             'trackingid': trackingid,
             'operationid': operationid,
         }
+    except lambdaclient.exceptions.ResourceNotFoundException as e:
+        progress.message = "The execution infrastructure is not available. Read more at https://github.com/iann0036/cfn-tf-custom-types."
+        progress.status = OperationStatus.FAILED
     except Exception as e:
         progress.message = str(e)
         progress.status = OperationStatus.FAILED
@@ -229,6 +232,9 @@ def delete_handler(
             'trackingid': trackingid,
             'operationid': operationid,
         }
+    except lambdaclient.exceptions.ResourceNotFoundException as e:
+        progress.message = "The execution infrastructure is not available. Read more at https://github.com/iann0036/cfn-tf-custom-types."
+        progress.status = OperationStatus.FAILED
     except Exception as e:
         progress.message = str(e)
         progress.status = OperationStatus.FAILED
