Update providers list

--- a/handlers.py.template
+++ b/handlers.py.template
@@ -102,6 +102,7 @@ def create_handler(
                 'operationId': operationid,
                 'model': resolved_model,
                 'logicalId': request.logicalResourceIdentifier,
+                'providerFullName': '###PROVIDERFULLNAME###',
                 'providerTypeName': '###PROVIDERTYPENAME###',
                 'terraformTypeName': '###TFTYPENAME###',
                 'returnValues': ###GETATT###,
@@ -161,6 +162,7 @@ def update_handler(
                 'operationId': operationid,
                 'model': resolved_model,
                 'logicalId': request.logicalResourceIdentifier,
+                'providerFullName': '###PROVIDERFULLNAME###',
                 'providerTypeName': '###PROVIDERTYPENAME###',
                 'terraformTypeName': '###TFTYPENAME###',
                 'returnValues': ###GETATT###,
@@ -220,6 +222,7 @@ def delete_handler(
                 'operationId': operationid,
                 'model': resolved_model,
                 'logicalId': request.logicalResourceIdentifier,
+                'providerFullName': '###PROVIDERFULLNAME###',
                 'providerTypeName': '###PROVIDERTYPENAME###',
                 'terraformTypeName': '###TFTYPENAME###',
                 'returnValues': ###GETATT###,
