--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,9 +1,8 @@
 name: Generate Documentation
 
 on:
-  push:
-    branches: [ master ]
-
+  schedule:
+    - cron: "0 22 1 * *"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -42,3 +41,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: docs
+        force: true
