--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,8 +1,11 @@
 name: Generate Documentation
 
 on:
+  push:
+    branches: [ master ]
   schedule:
     - cron: "0 22 1 * *"
+
 jobs:
   build:
     runs-on: ubuntu-latest
