--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,6 +22,8 @@ jobs:
         python-version: 3.7
     - name: Install Terraform
       uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_wrapper: false
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
