--- a/template.yml
+++ b/template.yml
@@ -159,6 +159,7 @@ Resources:
                   - !Ref S3Key
                   - cfn-tf-custom-types/app.zip
             Runtime: python3.8
+            MemorySize: 1024
             Timeout: 900
     
     ExecutorLambdaInvokeConfig:
