Fix object serializer

--- a/handlers.py.template
+++ b/handlers.py.template
@@ -147,9 +147,7 @@ def update_handler(
         
         resolved_model = None
         if model: # potentially no properties set
-            resolved_model = {}
-            for prop, value in vars(model).items():
-                resolved_model[prop] = value
+            resolved_model = model._serialize()
         
         lambdaclient.invoke(
             FunctionName="cfntf-executor",
@@ -207,9 +205,7 @@ def delete_handler(
         
         resolved_model = None
         if model: # potentially no properties set
-            resolved_model = {}
-            for prop, value in vars(model).items():
-                resolved_model[prop] = value
+            resolved_model = model._serialize()
         
         lambdaclient.invoke(
             FunctionName="cfntf-executor",
