--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,7 @@ jobs:
         terraform_wrapper: false
     - name: Install dependencies
       run: |
+        pip install https://github.com/iann0036/cloudformation-cli/archive/master.zip
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Generate providers
