--- a/template.yml
+++ b/template.yml
@@ -112,6 +112,12 @@ Resources:
                     Version: '2012-10-17'
                     Statement:
                       - Effect: Allow
+                        Action:
+                          - logs:CreateLogGroup
+                          - logs:CreateLogStream
+                          - logs:PutLogEvents
+                        Resource: "*"
+                      - Effect: Allow
                         Action: secretsmanager:GetSecretValue
                         Resource: !Sub "arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:terraform/*"
                       - Effect: Allow
