--- a/examples/aws_instance.yaml
+++ b/examples/aws_instance.yaml
@@ -5,7 +5,7 @@ Description: "Example that deploys a AWS instance"
 Resources:
 
     myInstance:
-        Type: "Terraform::AWS::Instance"
+        Type: "TF::AWS::Instance"
         Properties:
             Ami: "ami-02fd0b06f06d93dfc"
             InstanceType: "t2.micro"
