--- a/examples/digitalocean_droplet.yaml
+++ b/examples/digitalocean_droplet.yaml
@@ -5,7 +5,7 @@ Description: "Example that deploys a DigitalOcean droplet"
 Resources:
 
     myDroplet:
-        Type: "Terraform::DigitalOcean::Droplet"
+        Type: "TF::DigitalOcean::Droplet"
         Properties:
             Image: "ubuntu-18-04-x64"
             Name: "mydroplet1"
