--- a/examples/statuscake_test.yaml
+++ b/examples/statuscake_test.yaml
@@ -5,7 +5,7 @@ Description: "Example that deploys a StatusCake test"
 Resources:
 
     myTest:
-        Type: "Terraform::StatusCake::Test"
+        Type: "TF::StatusCake::Test"
         Properties:
             WebsiteName: "google.com"
             WebsiteUrl: "www.google.com"
