--- a/template.yml
+++ b/template.yml
@@ -4,7 +4,7 @@ Description: "Resources for the Terraform-to-CloudFormation custom type handler"
 
 Parameters:
     AllowAWSActions:
-        Description: If true, AWS actions will be permitted to execute through an administrative role (required for Terraform::AWS::* resources)
+        Description: If true, AWS actions will be permitted to execute through an administrative role (required for TF::AWS::* resources)
         Type: String
         Default: 'true'
         AllowedValues:
