--- a/.gitignore
+++ b/.gitignore
@@ -209,3 +209,98 @@ docs/vault.md
 docs/vcd.md
 docs/vsphere.md
 run.sh
+docs/aci.md
+docs/ad.md
+docs/ah.md
+docs/aiven.md
+docs/akamai.md
+docs/alkira.md
+docs/amixr.md
+docs/anxcloud.md
+docs/archive.md
+docs/artifactory.md
+docs/avi.md
+docs/aviatrix.md
+docs/azurecaf.md
+docs/azuredevops.md
+docs/b2.md
+docs/boundary.md
+docs/buildkite.md
+docs/checkly.md
+docs/checkpoint.md
+docs/ciscoasa.md
+docs/civo.md
+docs/cloudeos.md
+docs/cloudinit.md
+docs/cloudsigma.md
+docs/cloudsmith.md
+docs/cloudtamerio.md
+docs/configcat.md
+docs/constellix.md
+docs/databricks.md
+docs/dcnm.md
+docs/dme.md
+docs/dome9.md
+docs/dynatrace.md
+docs/ecl.md
+docs/equinix.md
+docs/exoscale.md
+docs/external.md
+docs/fortios.md
+docs/google-beta.md
+docs/gridscale.md
+docs/hcp.md
+docs/hcs.md
+docs/helm.md
+docs/http.md
+docs/ilert.md
+docs/intersight.md
+docs/ionoscloud.md
+docs/kubernetes-alpha.md
+docs/lacework.md
+docs/launchdarkly.md
+docs/limelight.md
+docs/logzio.md
+docs/metal.md
+docs/mongodbatlas.md
+docs/mso.md
+docs/netapp-cloudmanager.md
+docs/netapp-elementsw.md
+docs/netapp-gcp.md
+docs/null.md
+docs/nutanixkps.md
+docs/octopusdeploy.md
+docs/okta.md
+docs/oktaasa.md
+docs/onelogin.md
+docs/onepassword.md
+docs/opennebula.md
+docs/pnap.md
+docs/prismacloud.md
+docs/profitbricks.md
+docs/quorum.md
+docs/rancher2.md
+docs/rediscloud.md
+docs/rke.md
+docs/rollbar.md
+docs/sdm.md
+docs/sematext.md
+docs/signalfx.md
+docs/sigsci.md
+docs/splunk.md
+docs/stackpath.md
+docs/sumologic.md
+docs/thunder.md
+docs/time.md
+docs/transloadit.md
+docs/turbot.md
+docs/upcloud.md
+docs/venafi.md
+docs/victorops.md
+docs/vmc.md
+docs/volterra.md
+docs/vra.md
+docs/vra7.md
+docs/vultr.md
+docs/wavefront.md
+docs/zerotier.md
